--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -29,4 +29,4 @@ jobs:
         run: gradle build --no-daemon
 
       - name: Build Docker Image
-        run: docker image build -t CoApp-backend .
+        run: docker image build -t coapp-backend .
