Add mongoDB uri to application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
 spring.application.name=CoApp
+spring.mongodb.uri=mongodb+srv://4350_db_user:Con7AKxEZhrcnIMP@4350coapp.yfktzod.mongodb.net/myapp?appName=4350CoApp
